[project]
name = "spotify-dl"
version = "1.0.3"  # version managed by bumpver
description = "Downloads Spotify playlists in high quality without logging in by searching for each track and downloading the best match from YouTube Music"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Cha " },
]
maintainers = [
  { name = "Cha "  },
  { name = "Ever ATILANO", email = "ever.developer3001@fgmail.com" },
]

dependencies = [
    "anyio>=4.8.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "colorama>=0.4.6",
    "dnspython>=2.7.0",
    "h11>=0.14.0",
    "httpcore>=0.16.3",
    "httpx>=0.23.3",
    "idna>=3.10",
    "innertube>=2.1.16",
    "loguru>=0.7.3",
    "mediate>=0.1.8",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pymongo>=4.11.1",
    "readerwriterlock>=1.0.9",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "rfc3986>=1.5.0",
    "roster>=0.1.11",
    "sniffio>=1.3.1",
    "spotapi>=1.1.4",
    "tls-client>=1.0.1",
    "typer>=0.15.2",
    "typing-extensions>=4.12.2",
    "urllib3>=2.3.0",
    "validators>=0.34.0",
    "websockets>=15.0",
    "yt-dlp>=2025.2.19",
]

# Optional dependency groups.
[dependency-groups]
dev = [
  "bumpver>=2024.1130",
]

[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = false
push = false